use same data source for Datawrapper

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<b>Cons:</b> lagging interface, limits on design and interactivity
 		</p>
 		<center><br>
-			<iframe src="http://datawrapper.dwcdn.net/bAnJX/1/" scrolling="no" frameborder="0" allowtransparency="true" width="600" height="302"></iframe>
+			<iframe src="http://datawrapper.dwcdn.net/Yd4zi/1/" scrolling="no" frameborder="0" allowtransparency="true" width="600" height="400"></iframe>
 			<br>
 		</center>
 
